Add upload button on view page

--- a/GUI/public/css/client.css
+++ b/GUI/public/css/client.css
@@ -25,6 +25,10 @@ div {
     background-color: white;
 }
 
+div.dialog {
+    background-color: black;
+}
+
 p {
     margin: 0px;
     font-family: arial;
