--- a/GUI/public/css/common.css
+++ b/GUI/public/css/common.css
@@ -14,8 +14,18 @@ body {
     color: black;
 }
 
+div {
+    background-color: white;
+}
+
 div.main {
+    padding:10px;
+}
+
+div.controller {
     margin:10px;
+    width:1350px;
+    height:100px;
 }
 
 input.button_page {
@@ -60,4 +70,26 @@ label.input_file {
 
 input.path_file {
     width: 240px;
+}
+
+#dialog_back {
+    position: absolute;
+    top:0px;
+    left:0px;
+    width:100%;
+    height:100%;
+    background-color: #000;
+    opacity: 0.5;
+}
+
+#dialog_body {
+    position: absolute;
+    border-radius: 6px 6px 6px 6px;
+    left:480px;
+    top:400px;
+    width:200px;
+    height:150px;
+    background-color: #FFF;
+    box-shadow: 6px 6px 6px rgba(0,0,0,0.4);  /* CSS3 */
+    padding:50px;
 }
