--- a/GUI/public/css/common.css
+++ b/GUI/public/css/common.css
@@ -78,7 +78,7 @@ input.path_file {
     left:0px;
     width:100%;
     height:100%;
-    background-color: #000;
+    background-color: black;
     opacity: 0.5;
 }
 
@@ -87,9 +87,17 @@ input.path_file {
     border-radius: 6px 6px 6px 6px;
     left:480px;
     top:400px;
-    width:200px;
-    height:150px;
-    background-color: #FFF;
+    background-color: white;
     box-shadow: 6px 6px 6px rgba(0,0,0,0.4);  /* CSS3 */
-    padding:50px;
+    padding:40px;
+}
+
+table.dialog {
+    margin: 10px;
+}
+
+button.dialog {
+    width:60px;
+    font-size: 14px;
+    padding: 2px 4px 2px 4px;
 }
