--- a/GUI/public/css/common.css
+++ b/GUI/public/css/common.css
@@ -73,17 +73,17 @@ input.path_file {
 }
 
 #dialog_back {
-    position: absolute;
+    position: fixed;
     top:0px;
     left:0px;
     width:100%;
-    height:100%;
+    min-height:100%;
     background-color: black;
     opacity: 0.5;
 }
 
 #dialog_body {
-    position: absolute;
+    position: fixed;
     border-radius: 6px 6px 6px 6px;
     left:480px;
     top:400px;
