--- a/GUI/public/css/graph.css
+++ b/GUI/public/css/graph.css
@@ -15,21 +15,6 @@ textarea:focus {
     border: 1px solid #1abc9c;
 }
 
-div {
-    //width: auto;
-    //margin: auto;
-    background-color: white;
-}
-
-p {
-    margin: 0px;
-    font-family: arial;
-    font-size: 18px;
-    //width: auto;
-    //margin: auto;
-    background-color: white;
-}
-
 td {
     vertical-align: top;
 }
@@ -146,3 +131,39 @@ rect {
     stroke-width: 3.0px;
 }
 
+#controller {
+    margin:10px;
+    width:1350px;
+    height:100px;
+}
+
+#dialog_back {
+    position: fixed;
+    top:0px;
+    left:0px;
+    width:100%;
+    min-height:100%;
+    background-color: black;
+    opacity: 0.5;
+}
+
+#dialog_body {
+    position: fixed;
+    border-radius: 6px 6px 6px 6px;
+    left:480px;
+    top:400px;
+    background-color: white;
+    box-shadow: 6px 6px 6px rgba(0,0,0,0.4);  /* CSS3 */
+    padding:40px;
+}
+
+table.dialog {
+    margin: 10px;
+}
+
+button.dialog {
+    width:60px;
+    font-size: 14px;
+    padding: 2px 4px 2px 4px;
+    margin: 0px 4px 0px 4px;
+}
